Update JavaFX + Spring Boot.md